// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodePanelBlocksField renders the field 1`] = `
<Memo(WithStyles(NodePanelField))
  name="Blocks"
  value="18 / ~12345"
/>
`;

exports[`NodePanelBlocksField renders the field when no latestBlock 1`] = `
<Memo(WithStyles(NodePanelField))
  name="Blocks"
  value="0 / ?"
/>
`;

exports[`NodePanelBlocksField will receive right props 1`] = `
Object {
  "currentBlock": "18",
  "latestBlock": "12345",
}
`;
